# INF21307-TP3

./: .gitignore  CMakeLists.txt  build.sh
src/: Node.hpp  PaginatedList.hpp  main.cpp
